--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <!--    <link rel="stylesheet" href="css/tailwind/tailwind.min.css">-->
 </head>
-<body id="target">
+<body id="target" class="antialiased bg-body text-body font-body">
 Loading...
 <script src="fritz2-template.js"></script>
 </body>
